# RFP-Intelligence-MVP

./: README.md  dashboard.html  pyproject.toml
src/: main.py  rfp.db  state.py  table.py  utils.py  workflow.py
