[project]
name = "rfp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
